--- a/templates/cliente.html
+++ b/templates/cliente.html
@@ -32,9 +32,9 @@
         <li>
           <a href="#">
             <i class='bx bx-cart'></i>
-            <span class="links_name">Carrinho</span>
+            <span class="links_name">Pedidos</span>
           </a>
-          <span class="tooltip">Carrinho</span>
+          <span class="tooltip">Pedidos</span>
         </li>
         <li>
           <a href="{% url 'perfil' %}">
