--- a/templates/static/general/css/general.css
+++ b/templates/static/general/css/general.css
@@ -1,9 +1,10 @@
 :root{
      
-    --main-color: #F5BE7C;
-    --dark-color: #7F4600;
+    --main-color: #c5b1a7;
+    --dark-color: #69452F;
     --light-color: #E7E7E7;
-    --contrast-color: #f88863;
-    --differential-color: #FF1616;
+    --contrast-color: #faab66;
+    --differential-color: #4b280b;
+    --red-color: #9E7047;
 
 }
