--- a/gerenciamento/templates/funcionarios.html
+++ b/gerenciamento/templates/funcionarios.html
@@ -2,9 +2,124 @@
 {% load static %}
 
 {% block 'head' %}
-    <link rel="stylesheet" href="{% static 'usuarios/css/tela-cadastro.css' %}">
+    <link rel="stylesheet" href="{% static 'usuarios/css/telaprincipal.css' %}">
+    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento.css' %}">
 {% endblock %}
 
 {% block 'dashboard' %}
+<body>
+    <br>
+    <div class="main-navbar">
+        <div class="titulo-funcionarios">
+            <h3 class="titulo-funcionario">Funcionários cadastrados no sistema:</h3>
+            <p class="subtitulo-funcionario">Aqui você pode visualizar todos os funcionários cadastrados no sistema.</p>
+        </div>
+        <div class="botoes">
+            <div class="add-funcionario" name="addfuncionario">
+                <button onclick="exibir_funcionario('1')" class="add-btn">Cadastrar Funcionário</button>
+            </div>
+            <div class="att-funcionario" name="attfuncionario">
+                <button onclick="exibir_funcionario('2')" class="add-btn">Atualizar Funcionário</button>
+            </div>
+        </div>
+    </div>
 
+    <div id="add-funcionario" class="adicionar-funcionario">
+        <form action="{% url 'addFuncionario' %}" method="POST">{% csrf_token %}
+            <div class="funcionarioform">
+                <h2 class="main-title">Cadastrar funcionário</h2>
+                <div class="row">
+                    <div class="col-md">
+                        <p class="label-text">Nome do funcionário</p>
+                        <input class="caixa-entrada" type="text" id="nome" name="nome" placeholder="Nome do funcionário">
+                    </div>
+                    <div class="col-md">
+                        <p class="label-text">Telefone</p>
+                        <input class="caixa-entrada" type="text" id="telefone" name="telefone" placeholder="Telefone do funcionário">
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md">
+                        <p class="label-text">Cargo</p>
+                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário">
+                    </div>
+                    <div class="col-md">
+                        <p class="label-text">Salário (apenas números)</p>
+                        <input class="caixa-entrada" type="text" id="salario" name="salario" placeholder="Salário do funcionário">
+                    </div>
+                </div>
+                <br>
+                <input type="submit" value="Adicionar" class="btn-add-principal">
+            </div>
+        </form>
+    </div>
+
+    <div id="att-funcionario" class="adicionar-funcionario">
+        <div class="funcionarioform">
+            <h2 class="main-title">Atualizar funcionário</h2>
+            <p class="label-text">Funcionário: </p>
+                <select id="funcionario-select" onchange="dados_funcionario(this)" class="form-control">
+                    <option value="" selected disabled hidden>Selecione um funcionário</option>
+                    {% for funcionario in funcionarios %}
+                        <option value="{{ funcionario.id }}">{{ funcionario.nome }}</option>
+                    {% endfor %}
+                </select>
+                <br>
+                <div class="row">
+                    <div class="col-md">
+                        <p class="label-text">Nome do funcionário</p>
+                        <input class="caixa-entrada" type="text" id="nome" name="nome" placeholder="Nome do funcionário">
+                    </div>
+                    <div class="col-md">
+                        <p class="label-text">Telefone</p>
+                        <input class="caixa-entrada" type="text" id="telefone" name="telefone" placeholder="Telefone do funcionário">
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md">
+                        <p class="label-text">Cargo</p>
+                        <input class="caixa-entrada" type="text" id="cargo" name="cargo" placeholder="Cargo do funcionário">
+                    </div>
+                    <div class="col-md">
+                        <p class="label-text">Salário (apenas números)</p>
+                        <input class="caixa-entrada" type="text" id="salario" name="salario" placeholder="Salário do funcionário">
+                    </div>
+                </div>
+                <br>
+                <input onclick="atualizar_funcionario()" type="submit" value="Atualizar" class="btn-add-principal">
+            </div>
+        </div>
+    </div>
+        
+
+    <div class="funcionarios">
+        <div class="container-fluid distanciamento-cliente">
+            <table class="table table-dark">
+                <thead>
+                    <tr>
+                        <th class="id" scope="col">Identificador</th>
+                        <th class="nome" scope="col">Nome</th>
+                        <th class="telefone" scope="col">Telefone</th>
+                        <th class="cargo" scope="col">Cargo</th>
+                        <th class="salario" scope="col">Salário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for funcionario in funcionarios %}
+                        <tr>
+                            <th>{{ funcionario.id_funcionario }}</th>
+                            <td>{{ funcionario.nome_funcionario }}</td>
+                            <td>{{ funcionario.telefone_funcionario }}</td>
+                            <td>{{ funcionario.cargo }}</td>
+                            <td>R$ {{ funcionario.salario }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <script src="{% static 'gerenciamento/js/gerenciamento.js' %}"></script>
+</body>
 {% endblock %}
