--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -21,6 +21,10 @@
                             <input type="text" class="form-control" placeholder="Nome" name="nome" value="{{nome}}" required>
                         </div>
                         <div class="col-md">
+                            <p>Sobrenome:</p>
+                            <input type="text" class="form-control" placeholder="Sobrenome" name="sobrenome" value="{{sobrenome}}" required>
+                        </div>
+                        <div class="col-md">
                             <p>CPF:</p>
                             <input type="text" class="form-control" placeholder="___.___.___-__" name="cpf" value="{{cpf}}" required>
                         </div>
