--- a/gerenciamento/templates/funcionarios.html
+++ b/gerenciamento/templates/funcionarios.html
@@ -88,7 +88,12 @@
                     </div>
                 </div>
                 <br>
-                <input onclick="atualizar_funcionario()" type="submit" value="Atualizar" class="btn-add-principal">
+                <div class="row">
+                    <input onclick="atualizar_funcionario()" type="submit" value="Atualizar" class="btn-add-principal">
+                    <input onclick="excluir_funcionario()" type="submit" value="Excluir" class="btn-remover-principal">
+                </div>
+                
+                
             </div>
         </div>
     </div>
