--- a/gerenciamento/templates/principalGerente.html
+++ b/gerenciamento/templates/principalGerente.html
@@ -117,64 +117,31 @@
             <div class="main-detail">
                 <h2 class="main-title">Faça seu pedido</h2>
                 <div class="detail-wrapper">
-                    <div class="detail-card">
-                        <img class="detail-img" src="{% static 'usuarios/img/destaque1.jpg' %}">
-                        <div class="detail-desc">
-                            <div class="detail-name">
-                                <h4>Coxinhas</h4>
-                                <p class="detail-sub">Deliciosa coxinha de coisa que voce gosta</p>
-                                <p class="price">R$ 2,50</p>
-                            </div>
-                            <ion-icon class="detail-favorites" name="bookmark-outline"></ion-icon>
-                        </div>
-                    </div>
-                    <div class="detail-card">
-                        <img class="detail-img" src="{% static 'usuarios/img/destaque2.png' %}">
-                        <div class="detail-desc">
-                            <div class="detail-name">
-                                <h4>Pastel</h4>
-                                <p class="detail-sub">Deliciosa coxinha de coisa que voce gosta</p>
-                                <p class="price">R$ 4,50</p>
-                            </div>
-                            <ion-icon class="detail-favorites" name="bookmark-outline"></ion-icon>
-                        </div>
-                    </div> 
-                    <div class="detail-card">
-                        <img class="detail-img" src="{% static 'usuarios/img/destaque3.jpg' %}">
-                        <div class="detail-desc">
-                            <div class="detail-name">
-                                <h4>Pastel</h4>
-                                <p class="detail-sub">Deliciosa coxinha de coisa que voce gosta</p>
-                                <p class="price">R$ 4,50</p>
-                            </div>
-                            <ion-icon class="detail-favorites" name="bookmark-outline"></ion-icon>
-                        </div>
-                    </div> 
-                    <div class="detail-card">
-                        <img class="detail-img" src="{% static 'usuarios/img/destaque4.jpg' %}">
-                        <div class="detail-desc">
-                            <div class="detail-name">
-                                <h4>Pastel</h4>
-                                <p class="detail-sub">Deliciosa coxinha de coisa que voce gosta</p>
-                                <p class="price">R$ 4,50</p>
-                            </div>
-                            <ion-icon class="detail-favorites" name="bookmark-outline"></ion-icon>
-                        </div>
-                    </div> 
                     {% for produto in produtos %}
-                    <div class="detail-card">
-                        <img class="detail-img" src="{% produto.imagem.url %}" alt="{% produto.nome_produto %}">
+                    <div class="detail-card produto-card" onclick="expandirProduto(this, '{{produto.nome_produto}}', '{{produto.descricao}}', '{{produto.preco}}', '{{produto.imagem.url}}')">
+                        <img class="detail-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
                         <div class="detail-desc">
                             <div class="detail-name">
                                 <h4>{{produto.nome_produto}}</h4>
                                 <p class="detail-sub">{{produto.descricao}}</p>
-                                <p class="price">{{produto.preco}}</p>
+                                <p class="price">R$ {{produto.preco}}</p>
                             </div>
                             <ion-icon class="detail-favorites" name="bookmark-outline"></ion-icon>
                         </div>
                     </div> 
                     {% endfor %}
                 </div>
+            </div>
+
+            <div id="produto-expandido" style="display: none">
+                <ion-icon onclick="contrairProduto()" class="close" name="close-outline"></ion-icon>
+                <img id="produto-imagem" src="" alt="Imagem do Produto">
+                <h2 id="produto-nome"></h2>
+                <p id="produto-descricao"></p>
+                <p id="produto-preco"></p>
+                <label for="quantidade">Quantidade:</label>
+                <input type="number" id="quantidade" name="quantidade" min="1" value="1">
+                <button class="add-carrinho" onclick="adicionarCarrinho()">Adicionar ao carrinho</button>
             </div>
         </div>
     </div>
