--- a/gerenciamento/templates/principalGerente.html
+++ b/gerenciamento/templates/principalGerente.html
@@ -4,6 +4,7 @@
 
 {% block 'head' %}
     <link rel="stylesheet" href="{% static 'usuarios/css/telaprincipal.css' %}">
+    <link rel="stylesheet" href="{% static 'gerenciamento/css/gerenciamento.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 {% endblock %}
 
@@ -118,7 +119,7 @@
                 <h2 class="main-title">Faça seu pedido</h2>
                 <div class="detail-wrapper">
                     {% for produto in produtos %}
-                    <div class="detail-card produto-card" onclick="expandirProduto(this, '{{produto.nome_produto}}', '{{produto.descricao}}', '{{produto.preco}}', '{{produto.imagem.url}}')">
+                    <div class="detail-card produto-card" onclick="expandirProduto('{{ produto.nome_produto }}', '{{ produto.descricao }}', '{{ produto.preco }}', '{{ produto.imagem.url }}')">
                         <img class="detail-img" src="{{ produto.imagem.url }}" alt="{{ produto.nome_produto }}">
                         <div class="detail-desc">
                             <div class="detail-name">
@@ -133,16 +134,19 @@
                 </div>
             </div>
 
-            <div id="produto-expandido" style="display: none">
-                <ion-icon onclick="contrairProduto()" class="close" name="close-outline"></ion-icon>
-                <img id="produto-imagem" src="" alt="Imagem do Produto">
-                <h2 id="produto-nome"></h2>
-                <p id="produto-descricao"></p>
-                <p id="produto-preco"></p>
-                <label for="quantidade">Quantidade:</label>
-                <input type="number" id="quantidade" name="quantidade" min="1" value="1">
-                <button class="add-carrinho" onclick="adicionarCarrinho()">Adicionar ao carrinho</button>
-            </div>
+            
+        </div>
+    </div>
+    <div id="produto-modal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="fecharModal()">&times;</span>
+            <img id="produto-imagem-modal" class="modal-img" alt="Imagem do Produto">
+            <h2 id="produto-nome-modal"></h2>
+            <p id="produto-descricao-modal"></p>
+            <p id="produto-preco-modal"></p>
+            <label for="quantidade-modal">Quantidade:</label>
+            <input type="number" id="quantidade-modal" name="quantidade-modal" value="1" min="1">
+            <button onclick="adicionarAoCarrinho()">Adicionar ao Carrinho</button>
         </div>
     </div>
 </body>
@@ -151,4 +155,5 @@
 <!-- javascript-->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="{% static 'usuarios/js/principal.js' %}"></script>
+<script src="{% static 'gerenciamento/js/gerenciamento.js' %}"></script>
 {% endblock %}
