--- a/gerenciamento/templates/adicionarProduto.html
+++ b/gerenciamento/templates/adicionarProduto.html
@@ -8,72 +8,93 @@
 {% block 'dashboard' %}
 <body>
     <div class="main">
-        <form action="% url 'addProduto' %" method="POST" enctype="multipart/form-data">{% csrf_token %}
-            <div class="main-produto">
-                <h2 class="main-title">Adicionar produto</h2>
-                #TODO tela de atualizar produto
-                <div class="row">
-                    <p class="label-text">Nome do produto</p>
-                </div>
-                <div class="row">
-                    {{ form.nome_produto }}
-                </div>
-                <div class="row">
-                    <p class="label-text">Descrição</p>
-                </div>
-                <div class="row">
-                    {{ form.nome_produto }}
-                </div>
-                <div class="row">
-                    <p class="label-text">Preço</p>
-                </div>
-                <div class="row">
-                    {{ form.nome_produto }}
-                </div>
-                <br>
-                <div class="row">
-                    <p class="label-text">Categoria</p>
-                
-                    <div class="option-entrada">
-                        {{ form.categoria }}
-                    </div>
-                    <div class="label-imagem">
-                        <label for="{{ form.imagem.id_for_label }}">Imagem</label>
-                        {{ form.imagem }}
-                    </div>
-                </div>
-
+        <div class="main-navbar">
+            <div class="titulo-produtos">
+                <h3 class="titulo-produto">Gerenciamento de produto:</h3>
+                <p class="subtitulo-produto">Aqui você pode gerenciar os produtos do sistema.</p>
             </div>
-        <br>
+            <div class="botoes">
+                <div class="adicionar-produto" name="adicionarProduto">
+                    <button onclick="exibir_produto('1')" class="add-btn">Cadastrar Produto</button>
+                </div>
+                <div class="atualizar-produto" name="atualizarProduto">
+                    <button onclick="exibir_produto('2')" class="add-btn">Atualizar Produto</button>
+                </div>
+            </div>
+        </div>
+    
 
-            <div class="add-ingredientes">
-                <h3>Ingredientes da receita</h3>
-                <span class="btn-add-ingredientes" onclick="addIngrediente()">+ Adicionar um ingrediente</span>
-                <div class="ingredientes" id="form-ingrediente">
-                    <br>
+        <div id="add-produto" class="add-produto" name="add-produto", style="display:none">
+            <form action="% url 'addProduto' %" method="POST" enctype="multipart/form-data">{% csrf_token %}
+                <div class="main-produto">
+                    <h2 class="main-title">Adicionar produto</h2>
+                    #TODO tela de atualizar produto
                     <div class="row">
                         <div class="col-md">
-                            {{ form.nome_ingrediente }}
+                            <p class="label-text">Nome do produto</p>
                         </div>
                         <div class="col-md">
-                            {{ form.unidadeMedida }}
+                            <p class="label-text">Descrição</p>
                         </div>
                         <div class="col-md">
-                            {{ form.quantidade_usada }}
+                            <p class="label-text">Preço</p>
+                        </div>
+                    </div>
+                
+                    <div class="row">
+                        <div class="col-md">
+                            {{ form.nome_produto }}
+                        </div>
+                        <div class="col-md">
+                            {{ form.descricao }}
+                        </div>
+                        <div class="col-md">
+                            {{ form.preco }}
+                        </div>      
+                    </div>
+                    <br>
+                    <div class="row">
+                        <p class="label-text">Categoria</p>
+                        <div class="option-entrada">
+                            {{ form.categoria }}
+                        </div>
+                        <div class="label-imagem">
+                            <label for="{{ form.imagem.id_for_label }}">Imagem</label>
+                            {{ form.imagem }}
                         </div>
                     </div>
 
                 </div>
-            </div>
-            {{form.submit}}
             <br>
-            
-            <br>
-            <div class="botao">
-                <input type="submit" value="Enviar" class="btn-add-principal">
-            </div>
-            
-        </form>
+
+                <div class="add-ingredientes">
+                    <h3>Ingredientes da receita</h3>
+                    <span class="btn-add-ingredientes" onclick="addIngrediente()">+ Adicionar um ingrediente</span>
+                    <div class="ingredientes" id="form-ingrediente">
+                        <br>
+                        <div class="row">
+                            <div class="col-md">
+                                {{ form.nome_ingrediente }}
+                            </div>
+                            <div class="col-md">
+                                {{ form.unidadeMedida }}
+                            </div>
+                            <div class="col-md">
+                                {{ form.quantidade_usada }}
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                {{form.submit}}
+                <br>
+                
+                <br>
+                <div class="botao">
+                    <input type="submit" value="Enviar" class="btn-add-principal">
+                </div>
+            </form>
+        </div>
     </div>
     <script src="{% static 'gerenciamento/js/gerenciamento.js' %}"></script>
 </body>
