--- a/templates/static/gerenciamento/css/gerenciamento.css
+++ b/templates/static/gerenciamento/css/gerenciamento.css
@@ -180,23 +180,27 @@ font-weight: 600;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    max-width: 500px;
-    max-height: 570px;
+    max-width: 475px;
+    max-height: 645px;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: var(--main-color);
+    border: var(-[--main-color]) solid 1px;
+    border-radius: 8px;
 }
 
 .modal-img {
-    max-width: 450px;
-    max-height: 450px;
+    width: 466px;
+    height: 466px;
     display: block;
     margin: 0 auto;
+    object-fit: cover; /* Isso irá cobrir a área mantendo a proporção original */
+    border-radius: 8px;
+    margin-top: 2px;
 }
 
-.modal-conteudo {
-    background-color: #fefefe;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+.conteudo-text{
+    padding-left: 5px;
 }
 
 .modal-detalhes {
@@ -204,10 +208,15 @@ font-weight: 600;
 }
 
 .close {
-    color: #aaa;
+    color: #ff0000;
     float: right;
-    font-size: 28px;
+    font-size: 50px;
     font-weight: bold;
+    position: absolute;
+    top: 10px; /* ajuste conforme necessário para posicionar no canto superior */
+    right: 10px; /* ajuste conforme necessário para posicionar no canto direito */
+    cursor: pointer;
+    z-index: 1; /* Certifique-se de que o botão esteja acima da imagem */
 }
 
 .close:hover,
@@ -215,4 +224,24 @@ font-weight: 600;
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+.row{
+    display: flex;
+    font-weight: 600;
+    width: 475px;
+}
+.quantidade-selecionar{
+    width: 60px;
+    height: auto;
+}
+.botao-add-carrinho{
+    background-color: var(--dark-color);
+    color: white;
+    border: none;
+    border-radius: 20px;
+    width: 250px;
+    cursor: pointer;
+    padding: 9px;
+    align-self: center;
+    margin-bottom: 5px;
 }
