--- a/templates/static/usuarios/css/telaprincipal.css
+++ b/templates/static/usuarios/css/telaprincipal.css
@@ -66,7 +66,7 @@ body{
     width: 180px;
     cursor: pointer;
     margin-left: 35px;
-    margin-top: -35px;
+    height: 40px;
 }
 .add-btn{
     background-color: var(--dark-color);
